--- a/workspace/Project/.classpath
+++ b/workspace/Project/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JOGL"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="etu/upmc/project/graphics/Displayer.java|etu/upmc/project/graphics/ImageFrame.java" kind="src" path="src"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/jogl-2.0"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
